--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -43,4 +43,5 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd deploy
-            sudo docker-compose up -d 
+            sudo docker-compose up -d
+            qwerty
