--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -41,3 +41,6 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          script: |
+            cd deploy
+            docker-compose up -d
