--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -43,4 +43,4 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd deploy
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker_compose up -d
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose up -d
